# infitu

./: README.md
confeval/: CMakeLists.txt  README.md  package.xml
confeval/scripts/: BlockParameterEvaluator.py  EmpiricalParameterEvaluator.py  LaunchEvaluator.py
infi_eval/: CMakeLists.txt  README.md  package.xml
infi_eval/launch/: dictated_evaluation.launch
infi_eval/nodes/: bag_replayer.cpp  multi_bag_replayer.cpp
infi_eval/scripts/: empirical_evaluator.py  episode_terminator.py  fidelity_evaluator.py  launch_evaluator.py  meta_evaluator.py  sampling_evaluator.py
infi_feat/: CMakeLists.txt  README.md  package.xml
infi_feat/launch/: lo_features.launch  so_features.launch  vo_features.launch
infi_feat/scripts/: VelocityFeatures.py  floor_features.py  laser_painter.py
infi_inter/: CMakeLists.txt  README.md  package.xml  setup.py
infi_inter/nodes/: numeric_param_interface.py
infi_inter/python/infi_inter/: paraset_interface.py  utils.py
infi_inter/tests/: test_interface_getter.py
infi_learn/: CMakeLists.txt  README.md  package.xml  setup.py
infi_learn/launch/: bag_data.launch  bag_laser_random.launch  embedding_learner.launch  episode_terminator.launch  laser_learner.launch  laser_painter.launch  lo_setup.launch  random_actions.launch  save_dataset.launch  so_setup.launch  value_learner.launch  vo_setup.launch
infi_learn/nodes/: embedding_learner.py  laser_embedding_learner.py  laser_painter.py  test_laser.py  value_learner.py
infi_learn/python/infi_learn/: __init__.py  backends.py  class_estimator.py  classification.py  data_augmentation.py  data_backends.py  data_sources.py  embedding.py  embedding_learner.py  frontends.py  interfaces.py  laser_frontend.py  learners.py  learning.py  net_classifier.py  networks.py  parzen.py  plotting.py  sync_frontend.py  utils.py  value.py
infi_learn/python/infi_tune/: laser_frontend.py  sync_frontend.py
infi_learn/scripts/: bag_to_dataset.py  episode_terminator.py  learn_embedding.py  random_actions.py  velocity_monitor.py
infi_learn/test/: test_parzen.py
infi_msgs/: CMakeLists.txt  package.xml
infi_perf/: CMakeLists.txt  README.md  package.xml
infi_perf/launch/: reward_accumulators.launch  rewards.launch  rewards_vel2d.launch
infi_perf/nodes/: ape_reward.cpp  obs_log_likelihood_reward.cpp  reward_accumulator.cpp  sse_reward.cpp
infi_perf/scripts/: CPUReward.py  GeometricAverageReward.py  RunningAverageReward.py  SumReward.py
infi_tune/: CMakeLists.txt  README.md  package.xml
infi_tune/launch/: bag_laser_random.launch  bayes_optimizer.launch  cma_optimizer.launch  crossent_optimizer.launch  episode_terminator.launch  mf_bayesopt.launch  step_response.launch  uniform_sample.launch
infi_tune/nodes/: laser_embedding_learner.py
infi_tune/python/infi_tune/: __init__.py  backends.py  camera_frontend.py  data_sources.py  embedding.py  interfaces.py  learner_datasets.py
infitu/: CMakeLists.txt  package.xml
paramid/: CMakeLists.txt  README.md  package.xml
paramid/python/paramid/: dyna_reconfig_interface.py
paramid/tests/: test_interface_setter.py
perfant/: CMakeLists.txt  README.md  package.xml
