<?xml version="1.0"?>
<package>
  <name>confeval</name>
  <version>0.0.1</version>
  <description>Configuration evaluation in-field testing</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>fieldtrack</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>fieldtrack</run_depend>
  
</package>

