<?xml version="1.0"?>
<package>
  <name>infi_eval</name>
  <version>0.0.1</version>
  <description>In-field configuration evaluation for parameter tuning</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>rosbag_lib</build_depend>
  <build_depend>infi_msgs</build_depend>
  <build_depend>fieldtrack</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>rosbag_lib</run_depend>
  <run_depend>infi_msgs</run_depend>  
  <run_depend>fieldtrack</run_depend>
  <run_depend>percepto_msgs</run_depend>
  <run_depend>optim</run_depend>  
  
</package>

