<?xml version="1.0"?>
<package>
  <name>infi_perf</name>
  <version>0.0.1</version>
  <description>Perceptual performance quantification and reward computation</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>infi_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>infi_msgs</run_depend>
  
</package>

