<?xml version="1.0"?>
<package>
  <name>infi_tune</name>
  <version>0.0.1</version>
  <description>Infitu parameter tuning</description>

  <author>Humphrey Hu</author>
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>argus</run_depend>
  <run_depend>argus_utils</run_depend>
  
</package>