<?xml version="1.0"?>
<package>
  <name>paramid</name>
  <version>0.0.1</version>
  <description>Parameter middleware interfaces</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>paraset</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
</package>

