<?xml version="1.0"?>
<package>
  <name>perfant</name>
  <version>0.0.1</version>
  <description>Perceptual performance quantifications</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  
</package>

